...
                android:padding="2dp"
                android:src="@drawable/ic_baseline_south_24" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/gray_900"
            android:contentDescription="@string/desc_add_note"
...
