...
                android:onClick="@{()->model.setColorTint(2)}"
                android:padding="12dp"
                app:backgroundTint="@{model.getColorTint(2)}"
                app:srcCompat="@{model.note.backgroundColor == model.getColorTint(2) ? R.drawable.ic_baseline_circle_24 : -1}" />

            <ImageView
                android:id="@+id/amber"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_circle"
                android:onClick="@{()->model.setColorTint(3)}"
...
